feat: add new functions

--- a/src/app/pages/product/product.html
+++ b/src/app/pages/product/product.html
@@ -1,5 +1,5 @@
 <div class="cuerpo">
-  <mat-card *ngFor="let p of productos" class="productos-card">
+  <mat-card *ngFor="let p of product" class="productos-card">
     <mat-card-title>{{ p.name }}</mat-card-title>
     <mat-card-content>{{ p.desc }}</mat-card-content>
     <mat-card-actions>
